# constructive_geometries

./: .hgignore  .travis.yml  CHANGES.md  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-deploy.yml  python-test.yml
constructive_geometries/: __init__.py  calculate_areas.py  cg.py  compatibility.py  geomatcher.py
constructive_geometries/data/: areas.json  faces.json
docs/: Makefile  conf.py  index.rst
examples/: Geomatching.ipynb
tests/: geomatcher_tests.py  row_tests.py
