[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "constructive_geometries"
authors = [
  { name=" Chris Mutel", email="cmutel@gmail.com" }
]
maintainers = [
  { name=" Chris Mutel", email="cmutel@gmail.com" }
]
description = "Simple tools to define world locations from a set of topological faces and set algebra"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "country_converter",
    "wrapt"
]

[project.urls]
source = "https://github.com/ecoinvent/constructive_geometries"
homepage = "https://github.com/ecoinvent/constructive_geometries"
tracker = "https://github.com/ecoinvent/constructive_geometries/issues"

[project.optional-dependencies]
gis = [
    "constructive_geometries",
    "fiona",
    "shapely"
]
dev = [
    "build",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "setuptools",
]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true
packages = ["constructive_geometries"]

[tool.setuptools.dynamic]
version = {attr = "constructive_geometries.__version__"}

[tool.pytest.ini_options]
addopts = "--cov constructive_geometries --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 100
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]
